force-app/main/default/objects/Member_Affiliation__c/Member_Affiliation__c.object-meta.xml
<CustomObject>
    <label>Member Affiliation</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Member Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>