force-app/main/default/objects/Member_Affiliation__c/fields/AMS_Compound_Key__c.field-meta.xml
<CustomField>
    <fullName>AMS_Compound_Key__c</fullName>
    <description>AMS Contact ID + AMS Volunteer ID</description>
    <externalId>true</externalId>
    <inlineHelpText>AMS Contact ID + AMS Volunteer ID</inlineHelpText>
    <label>AMS Compound Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>