force-app/main/default/objects/Member_Affiliation__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>HIMSS_Group_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>