force-app/main/default/objects/Member_Affiliation__c/fields/Group_Role__c.field-meta.xml
<CustomField>
    <fullName>Group_Role__c</fullName>
    <label>Group Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>