force-app/main/default/objects/Member_Affiliation__c/fields/Volunteer_Group__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Name</label>
    <referenceTo>Volunteer_Group__c</referenceTo>
    <relationshipName>HIMMS_Group_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>