force-app/main/default/objects/Member_Affiliation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer_Group__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Group_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>